# project-starter

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.sh  template_README.md
.github/workflows/: check-lockfile.yaml  code-style.yaml  label_sync.yaml  pr-tests.yaml
exploration/: eda.ipynb
package_name/: __init__.py  model.py  types.py  utils.py
scripts/: setup.sh
tests/: test_model.py  test_utils.py
