[project]
authors = [{name = "pymc-devs", email = "info@pymc-labs.com"}]
dependencies = []
description = "Add a short description here"
name = "package_name"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
package_name = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.3,<3"
numpy = ">=2.1.1,<3"
ruff = ">=0.6.8,<0.7"
python-dotenv = ">=1.0.1,<2"
pre-commit = ">=3.8.0,<4"
beartype = ">=0.19.0,<0.20"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"
